--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <h1>主要取引先 逆引きツール</h1>
-    <label for="codeInput">取引先名を入力:</label>
-    <input type="text" id="codeInput" placeholder="例: 武田薬品">
+    <label for="codeInput">企業名を入力:</label>
+    <input type="text" id="codeInput" placeholder="例:トヨタ自動車">
     <button onclick="searchCompany()">検索</button>
 
     <div id="matches"></div>
@@ -108,3 +108,4 @@
     </script>
 </body>
 </html>
+
