--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
             list += "</ul>";
             resultDiv.innerHTML += list;
         }
+
+        // Enterキーでも検索できるようにする
+        document.getElementById("codeInput").addEventListener("keydown", function (event) {
+            if (event.key === "Enter") {
+                searchCompany();
+            }
+        });
     </script>
 </body>
 
