--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
         th {
             background-color: #eee;
         }
+
+        a {
+            color: inherit;
+            /* 周りのテキストと同じ色にする */
+            text-decoration: none;
+            /* 下線を消す */
+        }
+
+        a:hover {
+            text-decoration: underline;
+            /* ホバー時だけ下線を表示する（控えめに） */
+        }
     </style>
 </head>
 
