--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <li>
                 <a href="${url}" target="_blank">
                     ${item.code}: ${item.name}
-                </a> - ${item.ratio}
+                </a> - ${item.ratio}%
             </li>`;
             });
 
