--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
             <li>
                 <a href="${url}" target="_blank">
                     ${item.code}: ${item.name}
-                </a> - ${item.ratio}%
+                 - ${item.ratio}%
+                 </a>
             </li>`;
             });
 
