--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         // 選択した取引先を持つ企業を表示（割合付き & 降順ソート）
         function showCompanies(partnerName) {
             const resultDiv = document.getElementById("result");
-            resultDiv.innerHTML = `<h3>「${partnerName}」と取引している企業:</h3>`;
+            resultDiv.innerHTML = `<h3>「${partnerName}」と取引している企業(割合でソート):</h3>`;
 
             let results = [];
 
