--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <body>
     <h1>主要取引先 逆引きツール</h1>
-    <label for="codeInput">取引先名を入力:</label>
+    <label for="codeInput">企業名を入力:</label>
     <input type="text" id="codeInput" placeholder="例:トヨタ自動車">
     <button onclick="searchCompany()">検索</button>
 
