--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             });
 
             if (matches.size === 0) {
-                matchesDiv.innerHTML = "<p>該当する取引先は見つかりませんでした。</p>";
+                matchesDiv.innerHTML = `<p>${input}:に該当する取引先は見つかりませんでした。</p>`;
                 return;
             }
 
