--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 searchCompany();
             }
         });
+        resultDiv.scrollIntoView({ behavior: "smooth", block: "start" });
     </script>
 </body>
 
