--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 return;
             }
 
-            matchesDiv.innerHTML = "<p>一致した取引先を選んでください:</p>";
+            matchesDiv.innerHTML = `<p>「$${partnerName}」に一致した取引先を選んでください:</p>`;
             matches.forEach(name => {
                 const div = document.createElement("div");
                 div.textContent = name;
