--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
 
         // 選択した取引先を持つ企業を表示（割合付き & 降順ソート）
         function showCompanies(partnerName) {
+            const matchesDiv = document.getElementById("matches");
             const resultDiv = document.getElementById("result");
+            // --- 結果を matchesDiv のすぐ下に移動 ---
+            matchesDiv.insertAdjacentElement("afterend", resultDiv);
             resultDiv.innerHTML = `<h3>「${partnerName}」が主要取引先の企業(割合でソート):</h3>`;
 
             let results = [];
