--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <body>
     <h1>主要取引先 逆引きツール</h1>
-    <label for="codeInput">企業名か証券コードを入力(上場企業以外でも可):</label>
+    <label for="codeInput">企業名か証券コードを入力(企業名の場合上場企業以外でも可):</label>
     <input type="text" id="codeInput" placeholder="例:7203,トヨタ自動車">
     <button onclick="searchCompany()">検索</button>
 
