--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <body>
     <h1>主要取引先 逆引きツール</h1>
-    <label for="codeInput">企業名か証券コードを入力(企業名の場合上場企業以外でも可):</label>
+    <label for="codeInput">企業名か証券コードを入力(企業名の場合、上場企業以外でも可):</label>
     <input type="text" id="codeInput" placeholder="例:7203,トヨタ自動車">
     <button onclick="searchCompany()">検索</button>
 
@@ -109,7 +109,6 @@
                 if (company["主要取引先"]) {
                     company["主要取引先"].forEach(partner => {
                         if (partner["取引先名"].includes(inputName)) {
-                            inputName = partner["取引先名"];
                             matches.add(partner["取引先名"]);
                         }
                     });
